tcl-added-to all

--- a/usage_statistics_webtalk.html
+++ b/usage_statistics_webtalk.html
@@ -4,10 +4,10 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2258646</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov 21 13:15:29 2018</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Nov 21 14:52:49 2018</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.2 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>b676ed98ea324efb85df4fe163f94c08</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>45fe25dd4d3a416facfbc84858190004</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>0fa23824-7c37-4e33-993b-574d6226f3e5</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>201446719_1777515336_0_220</TD>
@@ -150,7 +150,7 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=69765</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=69866</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
@@ -213,17 +213,17 @@
     <TD>-seu_protect=default::none</TD>
     <TD>-sfcu=default::[not_specified]</TD>
     <TD>-shreg_min_size=default::3</TD>
-</TR><TR ALIGN='LEFT'>    <TD>-top=psk_sarma</TD>
+</TR><TR ALIGN='LEFT'>    <TD>-top=m3</TD>
     <TD>-verilog_define=default::[not_specified]</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:15s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:13s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=289.152MB</TD>
-    <TD>memory_peak=606.707MB</TD>
+    <TD>memory_gain=291.445MB</TD>
+    <TD>memory_peak=609.527MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
